# expression

./: .gitignore  Makefile  pyproject.toml  readme.md  setup.py
expression/: __init__.py  operators.py  parser.py  stack.py  utils.py
tests/: conftest.py  test_stack.py
