[tool.poetry]
name = "expression"
version = "0.1.0"
description = ""
authors = ["luliangce <luliangce@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"



[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
yapf = "^0.32.0"
toml = "^0.10.2"
ipython = "^8.4.0"
pytest = "^7.1.2"
pyflakes = "^2.5.0"

[[tool.poetry.source]]

url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
